Fixed text alignment and resized buttons, fixed display moving around screen upon new question

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,31 @@ body {
     text-align: center;
 }
 
+
+h1, h2, h3, h4, h5, h6, p {
+    font-family: 'Tangerine', cursive;
+    width: 100%;
+}
+
+h3 {
+    font-size: 3rem;
+}
+
+h4 {
+    font-size: 2.5rem;
+}
+
+p {
+    font-size: 2rem;
+}
+
+.row{
+    width: 100%;
+    text-align: center;
+}
+
+
+
 .display {
     width: 960px;
     height: 720px;
@@ -16,10 +41,11 @@ body {
 .btn-dark{
     border-color: white;
     background-color: black;
+    width: 60%;
+    margin-top: 15px;
 }
 
 .content{
-    margin-left: 200px;
-    margin-top: 200px;
+    margin-top: 100px;
     align-items: center;
 }
